--- a/19497671_LeTuanTai_KTPM_TH/PerssengerService/pom.xml
+++ b/19497671_LeTuanTai_KTPM_TH/PerssengerService/pom.xml
@@ -30,6 +30,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.retry/spring-retry -->
+<dependency>
+    <groupId>org.springframework.retry</groupId>
+    <artifactId>spring-retry</artifactId>
+    <version>1.3.4</version>
+</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
