--- a/19497671_LeTuanTai_KTPM_TH/PerssengerService/pom.xml
+++ b/19497671_LeTuanTai_KTPM_TH/PerssengerService/pom.xml
@@ -36,7 +36,24 @@
     <artifactId>spring-retry</artifactId>
     <version>1.3.4</version>
 </dependency>
-
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-redis</artifactId>
+	    </dependency>
+	
+	    <dependency>
+	        <groupId>io.lettuce</groupId>
+	        <artifactId>lettuce-core</artifactId>
+	    </dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
