--- a/19497671_LeTuanTai_KTPM_TH/PerssengerService/src/main/resources/application.properties
+++ b/19497671_LeTuanTai_KTPM_TH/PerssengerService/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 logging.level.org.hibernate.type=trace
+redis.host=localhost
+redis.port=6379
